# app-backlog-games-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
src/: main.py  requirements.txt  vercel.json
src/api/: app.py
src/api/routes/: backlog_route.py  user_route.py
src/controller/: Backlog.py  User.py
src/database/: backlog.json  database.py
src/models/: Backlog.py  User.py
